<resources>
    <string name="app_name">MyPlayerWear</string>
    <string name="floating_text">MusicSense</string>
    <string name="heart_rate">Heart rate</string>
    <string name="step_counter">Step counter</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gravity">Gravity</string>
    <string name="magnetic_field">Magnetic field</string>
    <string name="pressure">Pressure</string>
    <string name="orientation">Orientation</string>
    <string name="rotation_vector">Rotation vector</string>
    <color name="gray">#999E9EA6</color>
    <color name="forest">#57796A</color>
</resources>
