<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myplayerwear.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.myplayerwear.MainActivity">

            <LinearLayout
                android:id="@+id/oneLayoutInScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forest"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/playerFooter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="130dp"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/backwardButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:onClick="backward"
                        android:src="@drawable/img_btn_backward" />

                    <ImageButton
                        android:id="@+id/previousButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:onClick="previous"
                        android:src="@drawable/img_btn_previous" />

                    <ImageButton
                        android:id="@+id/playButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:onClick="play"
                        android:src="@drawable/img_btn_play" />

                    <ImageButton
                        android:id="@+id/nextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:onClick="next"
                        android:src="@drawable/img_btn_next" />

                    <ImageButton
                        android:id="@+id/forwardButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:onClick="forward"
                        android:src="@drawable/img_btn_forward" />

                </LinearLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/heartRateTitle"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/heart_rate"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/heartRateText"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="..."
                    android:textColor="@color/black" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/stepCounterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step_counter"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stepCounterText"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="..."
                    android:textColor="@color/black" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/gravityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/gravity"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/gravityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/gravity_x"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/gravity_y"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/gravity_z"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                </LinearLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/orientationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/orientation"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/orientationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/orientation_x"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/orientation_y"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/orientation_z"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/magneticFieldTitle"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/magnetic_field"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/magneticFieldLayout"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/magneticField_x"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:text="..." />

                    <TextView
                        android:id="@+id/magneticField_y"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:text="..." />

                    <TextView
                        android:id="@+id/magneticField_z"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:text="..." />
                </LinearLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/pressureTitle"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/pressure"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pressureText"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="..."
                    android:textColor="@color/black" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/accelerometerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/accelerometer"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/accelerometerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/accelerometer_x"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/accelerometer_y"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/accelerometer_z"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/rotationVectorTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rotation_vector"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/rotationVectorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/rotationVector_x"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/rotationVector_y"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/rotationVector_z"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="..."
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rotationVectorSecondLayout"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:paddingBottom="@dimen/activity_main_text_header_spacing"
        android:paddingTop="@dimen/activity_main_text_header_spacing"
        android:text="@string/floating_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <android.support.wear.widget.WearableRecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:scrollbars="vertical"
        android:visibility="visible" />

    <!-- Stacks the text field above the WearableRecyclerView at the top of the screen. -->

</FrameLayout>
